# reinsman

./: .env.example  .gitignore  CONTRIBUTING.md  DEVLOG.md  LICENSE  README.md  RESUME_PROMPT.txt  SECURITY.md  agent_factory.py  agent_loader.py  applog.py  config.py  evaluation.py  knowledge_store.py  llms.txt  orchestrator.py  pyproject.toml  requirements.txt  routines.py  run.ps1  run_server.ps1  self_improve.py  server.json  server.py  task_store.py  template_engine.py  tracing.py  viewer.py
.github/ISSUE_TEMPLATE/: goal-proposal.md
agent_core/: __init__.py  __main__.py  app.py  applog.py  config.py  tray.py
agent_core/channels/: telegram_bridge.py
agent_core/kb/: __init__.py  knowledge_store.py
agent_core/observability/: evaluation.py  tracing.py
agent_core/prompts/: agent_loader.py  template_engine.py
agent_core/runtime/: __init__.py  agent_factory.py  orchestrator.py  routines.py  self_improve.py  self_tooling.py  server.py  webui.py
agent_core/storage/: __init__.py  task_store.py
agent_core/tools/: publish.py
agents/: orchestrator.md
benchmarks/: LEDGER.md  devlog.py  ledger.json  run_suite.py
benchmarks/suite/: 01-file-transform.md  02-web-card.md  03-tool-smith.md
channels/: __init__.py  telegram_bridge.py
docs/: EXAMPLE_GOALS.md  SELF_TOOLING.md
docs/self-run-launch/: LEDGER.md  PROVENANCE.md  PUBLIC_LEDGER.md  README.md  VERIFICATION.md  candidates.md  plan.md  reproduce.ps1  reproduce.sh  research.md
knowledge/20_Meta/: Index.md  Policy.md
packaging/: agent-core.spec  build_exe.ps1  reinsman.spec
reinsman/: __init__.py  __main__.py  app.py  applog.py  config.py  tray.py
reinsman/channels/: __init__.py  mcp_server.py  telegram_bridge.py
reinsman/kb/: knowledge_store.py
reinsman/observability/: __init__.py  evaluation.py  tracing.py  viewer.py
reinsman/prompts/: __init__.py  agent_loader.py  template_engine.py
scripts/: autostart.ps1
starfuel/: LEDGER.md  star_fuel.py  state.json
templates/: README.md  archivist.md  costar.md  default.md  evaluator.md  executor.md  expert.md  planner.md  react.md  tool-smith.md
tools/: __init__.py  publish.py
(+16 files in other folders)
